# Sequence-Alignment-Algorithms

./: Cargo.toml  Performance Analysis (1).docx  Performance Analysis 4-18.docx  Performance Analysis.docx  main.rs
Needleman_Wunsch/: Cargo.toml  alignment.rs  grid.rs  mod.rs
Smith-Waterman/: Cargo.toml  alignment.rs  grid.rs  mod.rs
src/: lib.rs  main.rs
src/Needleman_Wunsch/: alignment.rs  grid.rs  mod.rs
src/Smith_Waterman/: alignment.rs  grid.rs  mod.rs
src/needleman_wunsch/: alignment.rs  mod.rs
src/smith_waterman/: grid.rs  mod.rs
