[package]
name = "algorithms-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clam = { git = "https://github.com/URI-ABD/clam", branch = "rust" }
# Needleman_Wunsch = { path = "../Needleman_Wunsch"}
# Smith_Waterman = { path = "../Smith_Waterman" }